Fixed problem with horizontal scroll on laptop

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,8 +1,4 @@
 /* You can add global styles to this file, and also import other style files */
-html,
-body {
-  min-width: max(100vw, 300px) !important;
-}
 
 /*     General overwrite     */
 body {
