--- a/src/app/components/components.component.scss
+++ b/src/app/components/components.component.scss
@@ -89,7 +89,7 @@ ngb-progressbar {
 }
 
 .page-header {
-  background-image: url("assets/img/suelo-negro.jpg");
+  background-image: url("../../assets/img/suelo-negro.jpg");
   background-position: center center;
   background-size: cover;
   height: 100vh;
