--- a/src/app/shared/footer/footer.component.scss
+++ b/src/app/shared/footer/footer.component.scss
@@ -5,7 +5,7 @@ footer {
   align-items: center;
   font-size: 16px;
   /* fondo */
-  background-image: url("assets/img/suelo-negro.jpg");
+  background-image: url("../../../assets/img/suelo-negro.jpg");
   background-position: center center;
   background-size: cover;
   span {
